--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "firebase": "^7.24.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-bootstrap-multiselect": "^2.4.1",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
     "react-redux-firebase": "^3.11.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "redux-firestore": "^0.12.0",
     "sass": "^1.56.2",
     "typescript": "^4.9.4",
